--- a/index.html
+++ b/index.html
@@ -27,27 +27,27 @@
 
 
 
-  <link rel="stylesheet" href="/vitewebsite/ier/src/assets/css/animate.css" />
-  <link rel="stylesheet" href="/vitewebsite/ier/src/assets/css/nice-select.css " />
-  <link rel="stylesheet" href="/vitewebsite/ier/src/assets/css/LineIcons.2.0.css" />
-  <link rel="stylesheet" href="/vitewebsite/ier/src/assets/css/bootstrap.4.5.2.min.css" />
-  <link rel="stylesheet" href="/vitewebsite/ier/src/assets/css/default.css" />
-  <link rel="stylesheet" href="/vitewebsite/ier/src/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/animate.css" />
+  <link rel="stylesheet" href="/assets/css/nice-select.css " />
+  <link rel="stylesheet" href="/assets/css/LineIcons.2.0.css" />
+  <link rel="stylesheet" href="/assets/css/bootstrap.4.5.2.min.css" />
+  <link rel="stylesheet" href="/assets/css/default.css" />
+  <link rel="stylesheet" href="/assets/css/style.css" />
 
 
 
 
-  <script src="/vitewebsite/ier/src/assets/js/vendor/jquery-1.12.4.min.js"></script>
-  <script src="/vitewebsite/ier/src/assets/js/vendor/modernizr-3.7.1.min.js"></script>
-  <script src="/vitewebsite/ier/src/assets/js/popper.min.js"></script>
-  <script src="/vitewebsite/ier/src/assets/js/bootstrap.4.5.2.min.js"></script>
-  <script src="/vitewebsite/ier/src/assets/js/jquery.easing.min.js"></script>
-  <script src="/vitewebsite/ier/src/assets/js/scrolling-nav.js"></script>
-  <script src="/vitewebsite/ier/src/assets/js/waypoints.min.js"></script>
-  <script src="/vitewebsite/ier/src/assets/js/jquery.counterup.min.js"></script>
-  <script src="/vitewebsite/ier/src/assets/js/jquery.nice-select.min.js"></script>
-  <script src="/vitewebsite/ier/src/assets/js/wow.min.js"></script>
-  <script src="/vitewebsite/ier/src/assets/js/main.js"></script>
+  <script src="/assets/js/vendor/jquery-1.12.4.min.js"></script>
+  <script src="/assets/js/vendor/modernizr-3.7.1.min.js"></script>
+  <script src="/assets/js/popper.min.js"></script>
+  <script src="/assets/js/bootstrap.4.5.2.min.js"></script>
+  <script src="/assets/js/jquery.easing.min.js"></script>
+  <script src="/assets/js/scrolling-nav.js"></script>
+  <script src="/assets/js/waypoints.min.js"></script>
+  <script src="/assets/js/jquery.counterup.min.js"></script>
+  <script src="/assets/js/jquery.nice-select.min.js"></script>
+  <script src="/assets/js/wow.min.js"></script>
+  <script src="/assets/js/main.js"></script>
 
 
 
