--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
   <link rel="stylesheet" href="/assets/css/bootstrap.4.5.2.min.css" />
   <link rel="stylesheet" href="/assets/css/default.css" />
   <link rel="stylesheet" href="/assets/css/style.css" />
+  <link rel="stylesheet" href="/assets/css/style.css.map" />
 
 
 
