--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 
 <head>
+  <meta name="google-site-verification" content="1sFft2G_iFpOg_leck4tIj4OG_LKwwEieC41GGyfTfk" />
   <link href="/src/style.css" rel="stylesheet">
 
   <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
