--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 
 
 <head>
+
+  <p style="display:none;" lang="fr">MTE Réparation Électronique Industrielle Algérie propose des services experts pour
+    réparer et maintenir les automates PLC, variateurs, capteurs, HMIs et systèmes de contrôle. Fiable et professionnel,
+    reconnu par les usines et industries à travers l'Algérie.</p>
+  <p style="display:none;" lang="ar">توفر MTE لإصلاح الإلكترونيات الصناعية في الجزائر خدمات احترافية لصيانة وإصلاح PLC،
+    المحركات الصناعية، المستشعرات، HMIs وأنظمة التحكم. موثوقة وسريعة، ومميزة لدى المصانع والصناعات في جميع أنحاء
+    الجزائر.</p>
+
+  <meta name="description" content="MTE Réparation Électronique Industrielle Algérie propose des services experts pour PLC,
+   variateurs, capteurs, HMIs et systèmes de contrôle.
+">
+
+
   <meta name="google-site-verification" content="1sFft2G_iFpOg_leck4tIj4OG_LKwwEieC41GGyfTfk" />
   <link href="/src/style.css" rel="stylesheet">
 
@@ -66,6 +79,10 @@
 </head>
 
 <body>
+
+
+
+
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 
