--- a/index.html
+++ b/index.html
@@ -1,60 +1,46 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
+
 <head>
-  <meta charset="utf-8">
+  <meta name="google-site-verification" content="1sFft2G_iFpOg_leck4tIj4OG_LKwwEieC41GGyfTfk" />
+  <link href="/src/style.css" rel="stylesheet">
+
+  <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <title>MTE - Industrial Electronic Repair</title>
-
-  <!-- Meta Tags -->
-  <meta name="description"
-    content="MTE Industrial Electronic Repair Algeria offers expert services in repairing and maintaining PLCs, industrial drives, sensors, HMIs, and control systems. Trusted by factories and industries across Algeria for fast, reliable, and professional electronics solutions.">
-  <meta name="google-site-verification" content="1sFft2G_iFpOg_leck4tIj4OG_LKwwEieC41GGyfTfk" />
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
-
-  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300;400;500;700&display=swap" rel="stylesheet">
-
-  <!-- CSS Libraries -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
+    rel="stylesheet">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>MTE-Industrial Electronic Repair</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+
+
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+
+
+
+
+
+
   <link rel="stylesheet" href="/assets/css/animate.css" />
-  <link rel="stylesheet" href="/assets/css/nice-select.css" />
+  <link rel="stylesheet" href="/assets/css/nice-select.css " />
   <link rel="stylesheet" href="/assets/css/LineIcons.2.0.css" />
   <link rel="stylesheet" href="/assets/css/bootstrap.4.5.2.min.css" />
   <link rel="stylesheet" href="/assets/css/default.css" />
   <link rel="stylesheet" href="/assets/css/style.css" />
   <link rel="stylesheet" href="/assets/css/style.css.map" />
 
-  <!-- Font Awesome -->
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
-  <!-- JS Vendor Scripts (head only for Modernizr) -->
-  <script src="/assets/js/vendor/modernizr-3.7.1.min.js"></script>
 
-</head>
 
-<body>
-
-  <!-- Hidden multilingual descriptions for SEO (optional) -->
-  <div style="display:none;">
-    <p lang="fr">MTE Réparation Électronique Industrielle Algérie propose des services experts pour réparer et maintenir
-      les automates PLC, variateurs, capteurs, HMIs et systèmes de contrôle. Fiable et professionnel, reconnu par les
-      usines et industries à travers l'Algérie.</p>
-    <p lang="ar">توفر MTE لإصلاح الإلكترونيات الصناعية في الجزائر خدمات احترافية لصيانة وإصلاح PLC، المحركات الصناعية،
-      المستشعرات، HMIs وأنظمة التحكم. موثوقة وسريعة، ومميزة لدى المصانع والصناعات في جميع أنحاء الجزائر.</p>
-  </div>
-
-  <!-- React Root -->
-  <div id="root"></div>
-
-  <!-- JS Scripts -->
   <script src="/assets/js/vendor/jquery-1.12.4.min.js"></script>
+  <script src="/assets/js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="/assets/js/popper.min.js"></script>
   <script src="/assets/js/bootstrap.4.5.2.min.js"></script>
   <script src="/assets/js/jquery.easing.min.js"></script>
@@ -65,13 +51,28 @@
   <script src="/assets/js/wow.min.js"></script>
   <script src="/assets/js/main.js"></script>
 
-  <!-- React / TypeScript Entry -->
+
+
+
+
+
+
+
+
+
+
+
+
+</head>
+
+<body>
+  <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 
-  <!-- Bootstrap Bundle (Popper included) -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
+
 
 </body>
 
