--- a/index.html
+++ b/index.html
@@ -3,8 +3,20 @@
 
 
 <head>
-  <meta name="google-site-verification" content="1sFft2G_iFpOg_leck4tIj4OG_LKwwEieC41GGyfTfk" />
 
+  <p style="display:none;" lang="fr">MTE Réparation Électronique Industrielle Algérie propose des services experts pour
+    réparer et maintenir les automates PLC, variateurs, capteurs, HMIs et systèmes de contrôle. Fiable et professionnel,
+    reconnu par les usines et industries à travers l'Algérie.</p>
+  <p style="display:none;" lang="ar">توفر MTE لإصلاح الإلكترونيات الصناعية في الجزائر خدمات احترافية لصيانة وإصلاح PLC،
+    المحركات الصناعية، المستشعرات، HMIs وأنظمة التحكم. موثوقة وسريعة، ومميزة لدى المصانع والصناعات في جميع أنحاء
+    الجزائر.</p>
+
+  <meta name="description" content="MTE Réparation Électronique Industrielle Algérie propose des services experts pour PLC,
+   variateurs, capteurs, HMIs et systèmes de contrôle.
+">
+
+
+  <meta name="google-site-verification" content="1sFft2G_iFpOg_leck4tIj4OG_LKwwEieC41GGyfTfk" />
   <link href="/src/style.css" rel="stylesheet">
 
   <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
@@ -16,6 +28,7 @@
     href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>MTE-Industrial Electronic Repair</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
@@ -66,6 +79,10 @@
 </head>
 
 <body>
+
+
+
+
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 
