--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
 <body>
 
 
-
+  <script>
+    window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+  </script>
+  <script defer src="/_vercel/insights/script.js"></script>
 
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
