--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <meta name="google-site-verification" content="1sFft2G_iFpOg_leck4tIj4OG_LKwwEieC41GGyfTfk" />
   <link href="/src/style.css" rel="stylesheet">
 
-  <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
+  <link rel="icon" type="image/svg+xml" href="/mte/public/images/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
