--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 
   <link href="/src/style.css" rel="stylesheet">
 
-  <link rel="icon" type="image/svg+xml" href="/mte/public/images/logo.png" />
+
+  <link <link rel="icon" type="image/png" href="/mte/public/images/logo.png" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
