--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
   <link href="/src/style.css" rel="stylesheet">
 
 
-  <link <link rel="icon" type="image/png" href="/mte/public/images/logo.png" />
-
+  <link rel="icon" type="image/png" href="/images/logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
