--- a/index.html
+++ b/index.html
@@ -5,19 +5,62 @@
 <head>
   <meta name="google-site-verification" content="1sFft2G_iFpOg_leck4tIj4OG_LKwwEieC41GGyfTfk" />
 
+
   <link href="/src/style.css" rel="stylesheet">
 
 
-  <link rel="icon" type="image/png" href="/images/logo.png" />
+
+
+  <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+  <!-- Title optimisé -->
+  <title>MTE - Réparation électronique industrielle à Médéa, Algérie | إصلاح الإلكترونيات الصناعية في المدية الجزائر
+  </title>
+
+  <!-- Meta description bilingue -->
+  <meta name="description"
+    content="MTE, spécialiste en réparation électronique industrielle à Médéa, Algérie. Maintenance, cartes électroniques, systèmes automatiques. خدمات إصلاح وصيانة الإلكترونيات الصناعية في المدية الجزائر.">
+
+  <!-- Meta keywords -->
+  <meta name="keywords"
+    content="réparation électronique, maintenance industrielle, cartes électroniques, automates, Algérie, Médéa, إصلاح إلكترونيات, صيانة صناعية, المدية, الجزائر">
+
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://moutie.vercel.app/" />
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/png" href="/images/logo.png" />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link
     href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
     rel="stylesheet">
-  <meta charset="utf-8">
-  <title>MTE-Industrial Electronic Repair</title>
+
+
+
+
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 
