--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 
 <body>
   <div id="root"></div>
+
+  <h1 class="visually-hidden">service reparation electronique industrielle algerie</h1>
   <script type="module" src="/src/main.tsx"></script>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
