--- a/index.html
+++ b/index.html
@@ -112,6 +112,51 @@
 <body>
   <div id="root"></div>
 
+
+
+
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "Organization",
+  "url": "https://moutie.vercel.app/",
+  "sameAs": [
+    "https://wa.me/213778461682",
+    "https://www.instagram.com/mooutiem"
+  ],
+  "logo": "https://moutie.vercel.app/images/logo.png",
+  "name": "MTE – Réparation Électronique Industrielle",
+  "description": "MTE est une entreprise spécialisée dans la réparation des cartes électroniques, maintenance des systèmes d'automatisation, et service d'électronique industrielle en Algérie.",
+  "email": "moutie225@gmail.com",
+  "telephone": "+213-778-46-16-82",
+  "address": {
+    "@type": "PostalAddress",
+    "streetAddress": "Ain Dhab, Médéa",
+    "addressLocality": "Médéa",
+    "addressCountry": "DZ",
+    "addressRegion": "Médéa",
+    "postalCode": "26011"
+  },
+  "founder": "Fekhar Moutie",
+  "foundingDate": "2023",
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+213-778-46-16-82",
+    "contactType": "customer service",
+    "areaServed": "DZ",
+    "availableLanguage": ["fr", "ar"]
+  }
+}
+</script>
+
+
+
+
+
+
+
+
   <h1 class="visually-hidden">service reparation electronique industrielle algerie</h1>
   <script type="module" src="/src/main.tsx"></script>
 
